<resources>
    <string name="app_name">Present and Future Value Calculator</string>
    <string name="txtValue">Value: </string>
    <string name="edtTxtValue_hint">Enter currency amount.</string>
    <string name="txtInsuranceRate">Insurance Rate: </string>
    <string name="txtFrequency">Frequency: </string>
    <string name="rdoMonthly">Monthly</string>
    <string name="rdoQuarterly">Quarterly</string>
    <string name="rdoSemi">Semi-Annually</string>
    <string name="rdoAnnually">Annually</string>
    <string name="txtInsuranceRateValue">0.5%</string>
    <string name="txtYearValue">0yrs.</string>
    <string name="txtCalculation">Calculation: </string>
    <string name="rdoPresent">Present Value</string>
    <string name="rdoFuture">Future Value</string>
    <string name="txtPresentTitle">Present Value</string>
    <string name="txtYearsSinceStart">Years</string>
    <string name="txtInterestAccum">Interest</string>
    <string name="txtTotalFuture">Total Value</string>
    <string name="percentage">%.2f%%</string>
    <string name="years">%d yrs.</string>
    <string name="currency">$%.2f</string>
    <string name="edtTxtValueError">Currency value is empty.\n</string>
    <string name="rdoFrequenciesError">No frequency selected.\n</string>
    <string name="rdoCalculationsError">No calculation type selected.</string>
</resources>
