<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.qc.cegep_heritage.presentandfuturevaluecalculator.MainActivity">

    <TextView
        android:id="@+id/txtValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtValue"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:labelFor="@+id/edtTxtValue"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:layout_marginStart="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <EditText
        android:id="@+id/edtTxtValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="97dp"
        android:layout_marginStart="97dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:hint="@string/edtTxtValue_hint"
        android:inputType="numberDecimal"
        app:layout_constraintLeft_toRightOf="@+id/txtValue"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtInsuranceRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtInsuranceRate"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/txtValue"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginStart="24dp" />

    <SeekBar
        android:id="@+id/skBarInsuranceRate"
        style="@android:style/Widget.Material.SeekBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="6dp"
        android:max="100"
        android:min="5"
        android:minHeight="25dp"
        android:minWidth="100dp"
        app:layout_constraintLeft_toRightOf="@+id/txtInsuranceRate"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtValue" />

    <TextView
        android:id="@+id/txtFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtFrequency"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtYears"
        android:layout_marginStart="24dp" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/skBarYear"
        app:layout_constraintLeft_toRightOf="@+id/txtFrequency"
        android:layout_marginLeft="46dp"
        android:layout_marginStart="51dp"
        android:id="@+id/radioGroup">

        <RadioButton
            android:id="@+id/rdoMonthly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdoMonthly" />

        <RadioButton
            android:id="@+id/rdoQuarterly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdoQuarterly" />

        <RadioButton
            android:id="@+id/rdoSemi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdoSemi" />

        <RadioButton
            android:id="@+id/rdoAnnually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdoAnnually" />
    </RadioGroup>

    <TextView
        android:id="@+id/txtInsuranceRateValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtInsuranceRateValue"
        app:layout_constraintLeft_toRightOf="@+id/skBarInsuranceRate"
        app:layout_constraintTop_toBottomOf="@+id/edtTxtValue"
        tools:ignore="RtlHardcoded" />

    <TextView
        android:id="@+id/txtYears"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="No. of Years:"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_marginTop="13dp"
        app:layout_constraintTop_toBottomOf="@+id/txtInsuranceRate"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent" />

    <SeekBar
        android:id="@+id/skBarYear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="14dp"
        android:max="50"
        android:min="0"
        android:minHeight="25dp"
        android:minWidth="100dp"
        app:layout_constraintLeft_toRightOf="@+id/txtYears"
        app:layout_constraintTop_toBottomOf="@+id/skBarInsuranceRate" />

    <TextView
        android:id="@+id/txtYearValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="9dp"
        android:layout_marginTop="20dp"
        android:text="@string/txtYearValue"
        app:layout_constraintLeft_toRightOf="@+id/skBarYear"
        app:layout_constraintTop_toBottomOf="@+id/txtInsuranceRateValue" />

    <Button
        android:id="@+id/btnCalculate"
        style="@android:style/Widget.Material.Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="182dp"
        android:text="Calculate"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:ignore="RtlHardcoded"
        android:layout_marginTop="22dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup2" />

    <TextView
        android:id="@+id/txtCalculation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtCalculation"
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:layout_marginLeft="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="141dp"
        app:layout_constraintTop_toBottomOf="@+id/txtFrequency" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="29dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintLeft_toRightOf="@+id/txtCalculation"
        android:layout_marginLeft="42dp"
        android:id="@+id/radioGroup2">

        <RadioButton
            android:id="@+id/rdoFuture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdoFuture" />

        <RadioButton
            android:id="@+id/rdoPresent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rdoPresent" />
    </RadioGroup>


</android.support.constraint.ConstraintLayout>
