<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ca.qc.cegep_heritage.presentandfuturevaluecalculator.FutureValue">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical">

            <TableLayout
                android:id="@+id/tblFutureValues"
                android:layout_width="@dimen/tblFutureValuesWidth"
                android:layout_height="@dimen/tblFutureValuesHeight"
                android:layout_marginStart="@dimen/tblFutureValuesMargin"
                android:layout_marginTop="@dimen/tblFutureValuesMargin"
                android:numColumns="auto_fit"
                android:verticalSpacing="@dimen/tblFutureValuesVSpacing"
                android:stretchColumns="*"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TableRow
                    android:id="@+id/tblRowHeaders"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    tools:ignore="UselessParent">
                    <TextView
                        android:id="@+id/txtYearsSinceStart"
                        android:text="@string/txtYearsSinceStart"/>
                    <TextView
                        android:id="@+id/txtInterestAccum"
                        android:text="@string/txtInterestAccum"/>
                    <TextView
                        android:id="@+id/txtTotalFuture"
                        android:text="@string/txtTotalFuture"/>

                </TableRow>
            </TableLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
